--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "sequelize": "^5.15.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "sequelize-cli": "^5.5.0"
   },
   "scripts": {
     "dev": "nodemon src/server.js"
   }
-
 }
