--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sequelize-cli": "^5.5.0"
   },
   "scripts": {
+    "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   }
 }
